--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask==2.2.2
 flask-swagger-ui==4.11.1
 h11==0.13.0
 idna==3.3
+importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
@@ -27,3 +28,5 @@ trio-websocket==0.9.2
 urllib3==1.26.11
 Werkzeug==2.2.2
 wsproto==1.1.0
+zipp==3.8.1
+gunicorn
